--- a/chequescan.html
+++ b/chequescan.html
@@ -4,50 +4,58 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>M0NARQ ChequeScan | Financial Intelligence</title>
-    <link rel="stylesheet" crossorigin href="/entry-client-6e158fa6.css">
-    <script type="module" src="entry-client-9303cc06.js"></script>
+    <link rel="stylesheet" href="entry-client-6e158fa6.css">
+    <link rel="icon" href="preloader-logo.svg">
     <style>
-        .json-view { background: #000; padding: 25px; font-family: 'JetBrains Mono', monospace; color: #0f0; border-radius: 5px; overflow: auto; font-size: 0.85rem; text-align: left; border: 1px solid #333; }
-        .feat-card { background: rgba(255,255,255,0.05); padding: 30px; border-radius: 8px; border-top: 3px solid #009CA6; height: 100%; transition: transform 0.3s; }
+        :root { --bg-navy: #0E1B2B; --teal: #009CA6; --orange: #FF6B1C; --glass: rgba(255, 255, 255, 0.05); }
+        body { background-color: var(--bg-navy); color: #F7F9FA; font-family: 'Sohne', sans-serif; }
+        .font-mono { font-family: 'JetBrains Mono', monospace; }
+        .text-teal { color: var(--teal); }
+        .border-glass { border: 1px solid rgba(255,255,255,0.1); }
+        .bg-glass { background: var(--glass); }
+        
+        .json-view { background: #000; padding: 25px; font-family: 'JetBrains Mono', monospace; color: #0f0; border-radius: 5px; overflow: auto; font-size: 0.85rem; text-align: left; border: 1px solid #333; height: 100%; }
+        .feat-card { background: var(--glass); padding: 30px; border-radius: 8px; border-top: 2px solid var(--teal); transition: transform 0.3s; height: 100%; }
         .feat-card:hover { transform: translateY(-5px); background: rgba(255,255,255,0.08); }
     </style>
 </head>
-<body class="bg-[#0E1B2B] text-white font-primary antialiased selection:bg-[#009CA6] selection:text-white">
+<body class="bg-[#0E1B2B] text-white antialiased">
     <div id="app">
-        <header class="fixed top-0 left-0 w-full z-50 mix-blend-difference border-b border-white/10">
-            <div class="container mx-auto px-5 h-20 flex items-center justify-between">
-                <a href="index.html" class="text-2xl font-secondary font-bold uppercase tracking-tighter">M0NARQ</a>
-                <nav class="hidden md:flex gap-8 text-sm font-medium uppercase tracking-widest">
-                    <a href="index.html" class="hover:text-[#009CA6] transition-colors">Industrial Core</a>
+        <header class="fixed top-0 left-0 w-full z-50 mix-blend-difference border-b border-white/10 bg-[#0E1B2B]/80 backdrop-blur-md">
+            <div class="container mx-auto px-6 h-20 flex items-center justify-between">
+                <a href="index.html" class="block w-32"><img src="logo-white.svg" alt="M0NARQ"></a>
+                <nav class="hidden md:flex gap-8 text-sm font-medium uppercase tracking-widest text-white/80">
+                    <a href="index.html" class="hover:text-[#009CA6]">Home</a>
+                    <a href="vision.html" class="hover:text-[#009CA6]">Industrial Core</a>
                 </nav>
                 <a href="#contact" class="text-[#009CA6] text-sm font-bold uppercase tracking-widest hover:text-white transition-colors">Get API Key →</a>
             </div>
         </header>
 
         <main data-scroll-container>
-            <section class="section-padding pt-[20vh] pb-20 text-center" data-scroll-section>
-                <div class="container mx-auto px-5">
+            <section class="min-h-screen flex items-center pt-20 text-center" data-scroll-section>
+                <div class="container mx-auto px-6">
                     <div class="text-[#FF6B1C] font-bold tracking-[0.2em] text-xs mb-6 uppercase">Financial Core</div>
-                    <h1 class="font-secondary text-5xl md:text-7xl mb-8 leading-tight">
-                        Documents Understood. <br><span class="text-[#009CA6]">In Bengali.</span>
+                    <h1 class="text-[clamp(3rem,6vw,7rem)] font-bold mb-8 leading-[0.9] tracking-tighter">
+                        Documents Understood. <br><span class="text-transparent bg-clip-text bg-gradient-to-r from-[#009CA6] to-white">In Bengali.</span>
                     </h1>
-                    <p class="text-lg text-white/60 max-w-2xl mx-auto leading-relaxed">
+                    <p class="text-xl text-white/60 max-w-2xl mx-auto leading-relaxed">
                         Solve the $2.7B productivity loss in paper processing. Instant verification of handwritten Bengali instruments, land deeds, and trade licenses.
                     </p>
                 </div>
             </section>
 
-            <section class="section-padding py-10" data-scroll-section>
-                <div class="container mx-auto px-5">
+            <section class="py-10" data-scroll-section>
+                <div class="container mx-auto px-6">
                     <div class="grid grid-cols-1 lg:grid-cols-2 gap-10 items-stretch">
                         <div class="bg-[#111] border border-white/10 rounded-xl p-10 flex flex-col items-center justify-center min-h-[400px] relative overflow-hidden">
                             <div class="absolute inset-0 bg-[url('https://placehold.co/800x400/111/333?text=Cheque+Image+Placeholder')] bg-cover opacity-20 mix-blend-overlay"></div>
                             <div class="text-center z-10">
-                                <div class="font-secondary text-2xl mb-2">Dutch-Bangla Bank Ltd</div>
+                                <div class="text-2xl mb-2 font-bold">Dutch-Bangla Bank Ltd</div>
                                 <div class="text-white/40 text-sm uppercase tracking-widest">Processing Image...</div>
                             </div>
                         </div>
-                        <div class="json-view h-full">
+                        <div class="json-view">
 <pre class="whitespace-pre-wrap">
 {
   <span class="text-[#c678dd]">"status"</span>: <span class="text-[#98c379]">"success"</span>,
@@ -74,23 +82,23 @@
                 </div>
             </section>
 
-            <section class="section-padding py-20" data-scroll-section>
-                <div class="container mx-auto px-5">
+            <section class="py-24" data-scroll-section>
+                <div class="container mx-auto px-6">
                     <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
                         <div class="feat-card">
-                            <h3 class="font-secondary text-2xl mb-4 text-[#009CA6]">The Moat</h3>
+                            <h3 class="text-2xl font-bold mb-4 text-[#009CA6]">The Moat</h3>
                             <p class="text-white/60 leading-relaxed text-sm">
-                                Standard OCR fails on handwritten Bengali. We trained on <strong>1.8M proprietary lines</strong> of local financial script to achieve 97% accuracy, using PaddleOCR and Gemini 2.0.
+                                Standard OCR fails on handwritten Bengali. We trained on <strong>1.8M proprietary lines</strong> of local financial script to achieve 97% accuracy, using <strong>PaddleOCR</strong> and Gemini 2.0 Reasoning.
                             </p>
                         </div>
                         <div class="feat-card">
-                            <h3 class="font-secondary text-2xl mb-4 text-[#009CA6]">Fraud Detection</h3>
+                            <h3 class="text-2xl font-bold mb-4 text-[#009CA6]">Fraud Detection</h3>
                             <p class="text-white/60 leading-relaxed text-sm">
                                 We don't just read text; we reason. The AI flags mismatches between "Amount in Words" vs "Figures" and detects signature forgery using cross-field validation logic.
                             </p>
                         </div>
                         <div class="feat-card">
-                            <h3 class="font-secondary text-2xl mb-4 text-[#009CA6]">Data Sovereignty</h3>
+                            <h3 class="text-2xl font-bold mb-4 text-[#009CA6]">Data Sovereignty</h3>
                             <p class="text-white/60 leading-relaxed text-sm">
                                 Financial data never leaves your premise. Deploy on local servers (MinIO/Kubernetes) to comply with <strong>Bangladesh Bank regulations</strong> and DPDPA 2023.
                             </p>
@@ -99,11 +107,11 @@
                 </div>
             </section>
 
-            <footer class="py-20 border-t border-white/10 text-center text-white/40 text-sm" data-scroll-section>
-                &copy; 2025 M0NARQ Technologies.
+            <footer class="py-20 border-t border-white/10 text-center text-white/40 text-xs uppercase tracking-widest font-mono" data-scroll-section>
+                &copy; 2025 M0NARQ Technologies Ltd.
             </footer>
         </main>
     </div>
-    <script type="module" src="/entry-client-9303cc06.js"></script>
+    <script type="module" src="entry-client-9303cc06.js"></script>
 </body>
 </html>
